data/derived/fa15/progs/unify/prog0698.ml.out
Characters 218-219:
  | Average (e1, e2)	  -> ((eval (e, x, y) +. eval (e, x, y)) /. 2)
                                                                 ^
Error: This expression has type int but an expression was expected of type
         float
